# BoGuanYueQu

./: NOTICE  README.md  pyproject.toml  requirements.txt
bo_guan_yue_qu/: __init__.py  benchmark.py  concepts.py  conv_lora.py  prefix_tuning.py  prompt_tuning.py  third_party.py  utils.py
bo_guan_yue_qu/algorithms/: concepts.py
bo_guan_yue_qu/backends/: __init__.py
bo_guan_yue_qu/backends/torch/: delta_residual.py  opendelta.py
examples/: test_prefix.py
