[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bo_guan_yue_qu"
authors = [{name = "2catycm", email = "12011404@mail.sustech.edu.cn"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/WhicheverAI"
